Only show the ISS warning on mobile browsers - Fixes #26
This is judged the same way as it is done to halt loading while not
playing on mobile: By userAgent.


Former-commit-id: 7fd12567dd3f6de571ec553b752efd24003ae587

--- a/public_html/css/dropdown.css
+++ b/public_html/css/dropdown.css
@@ -74,6 +74,7 @@
 }
 
 #ISS-warning {
+  display: none;
   background-color:inherit;
   position: absolute;
   left: 100%;
